exports[`no-duplicate-assertions > invalid(1): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
  5 | 	assert.strictEqual(user.id, 1);
  6 | });

`;

exports[`no-duplicate-assertions > invalid(1): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
> 5 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(10): import test from 'node:test';\ntest('user', t => {\n\t(t as any).assert.strictEqual(user.id, 1);\n\t(t as any).assert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('user', t => {
  3 | 	(t as any).assert.strictEqual(user.id, 1);
  4 | 	(t as any).assert.strictEqual(user.id, 1);
  5 | });

`;

exports[`no-duplicate-assertions > invalid(10): import test from 'node:test';\ntest('user', t => {\n\t(t as any).assert.strictEqual(user.id, 1);\n\t(t as any).assert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('user', t => {
  3 | 	(t as any).assert.strictEqual(user.id, 1);
> 4 | 	(t as any).assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  5 | });

`;

exports[`no-duplicate-assertions > invalid(11): import test from 'node:test';\ntest('user', t => {\n\tt?.assert.strictEqual(user.id, 1);\n\tt?.assert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('user', t => {
  3 | 	t?.assert.strictEqual(user.id, 1);
  4 | 	t?.assert.strictEqual(user.id, 1);
  5 | });

`;

exports[`no-duplicate-assertions > invalid(11): import test from 'node:test';\ntest('user', t => {\n\tt?.assert.strictEqual(user.id, 1);\n\tt?.assert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('user', t => {
  3 | 	t?.assert.strictEqual(user.id, 1);
> 4 | 	t?.assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  5 | });

`;

exports[`no-duplicate-assertions > invalid(12): import test from 'node:test';\nimport assert from 'node:assert';\ntest('parent', t => {\n\tt.test('child', () => {\n\t\tassert.strictEqual(user.id, 1);\n\t\tassert.strictEqual(user.id, 1);\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('parent', t => {
  4 | 	t.test('child', () => {
  5 | 		assert.strictEqual(user.id, 1);
  6 | 		assert.strictEqual(user.id, 1);
  7 | 	});
  8 | });

`;

exports[`no-duplicate-assertions > invalid(12): import test from 'node:test';\nimport assert from 'node:assert';\ntest('parent', t => {\n\tt.test('child', () => {\n\t\tassert.strictEqual(user.id, 1);\n\t\tassert.strictEqual(user.id, 1);\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('parent', t => {
  4 | 	t.test('child', () => {
  5 | 		assert.strictEqual(user.id, 1);
> 6 | 		assert.strictEqual(user.id, 1);
    | 		^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  7 | 	});
  8 | });

`;

exports[`no-duplicate-assertions > invalid(13): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert(user.active);\n\tassert.ok(user.active);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert(user.active);
  5 | 	assert.ok(user.active);
  6 | });

`;

exports[`no-duplicate-assertions > invalid(13): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert(user.active);\n\tassert.ok(user.active);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert(user.active);
> 5 | 	assert.ok(user.active);
    | 	^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(14): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\t// Copy-paste leftover\n\tassert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
  5 | 	// Copy-paste leftover
  6 | 	assert.strictEqual(user.id, 1);
  7 | });

`;

exports[`no-duplicate-assertions > invalid(14): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\t// Copy-paste leftover\n\tassert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
  5 | 	// Copy-paste leftover
> 6 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  7 | });

`;

exports[`no-duplicate-assertions > invalid(15): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.deepStrictEqual(...values);\n\tassert.deepStrictEqual(...values);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.deepStrictEqual(...values);
  5 | 	assert.deepStrictEqual(...values);
  6 | });

`;

exports[`no-duplicate-assertions > invalid(15): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.deepStrictEqual(...values);\n\tassert.deepStrictEqual(...values);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.deepStrictEqual(...values);
> 5 | 	assert.deepStrictEqual(...values);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(16): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.profile?.id, 1);\n\tassert.strictEqual(user.profile?.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.profile?.id, 1);
  5 | 	assert.strictEqual(user.profile?.id, 1);
  6 | });

`;

exports[`no-duplicate-assertions > invalid(16): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.profile?.id, 1);\n\tassert.strictEqual(user.profile?.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.profile?.id, 1);
> 5 | 	assert.strictEqual(user.profile?.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(17): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', async () => {\n\tawait assert.rejects(promise);\n\tawait assert.rejects(promise);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', async () => {
  4 | 	await assert.rejects(promise);
  5 | 	await assert.rejects(promise);
  6 | });

`;

exports[`no-duplicate-assertions > invalid(17): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', async () => {\n\tawait assert.rejects(promise);\n\tawait assert.rejects(promise);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', async () => {
  4 | 	await assert.rejects(promise);
> 5 | 	await assert.rejects(promise);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(18): import test from 'node:test';\nimport strictAssert from 'node:assert/strict';\nimport looseAssert from 'node:assert';\ntest('user', () => {\n\tstrictAssert.equal(user.id, 1);\n\tlooseAssert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import strictAssert from 'node:assert/strict';
  3 | import looseAssert from 'node:assert';
  4 | test('user', () => {
  5 | 	strictAssert.equal(user.id, 1);
  6 | 	looseAssert.strictEqual(user.id, 1);
  7 | });

`;

exports[`no-duplicate-assertions > invalid(18): import test from 'node:test';\nimport strictAssert from 'node:assert/strict';\nimport looseAssert from 'node:assert';\ntest('user', () => {\n\tstrictAssert.equal(user.id, 1);\n\tlooseAssert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import strictAssert from 'node:assert/strict';
  3 | import looseAssert from 'node:assert';
  4 | test('user', () => {
  5 | 	strictAssert.equal(user.id, 1);
> 6 | 	looseAssert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  7 | });

`;

exports[`no-duplicate-assertions > invalid(19): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual((user.id), 1);\n\tassert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual((user.id), 1);
  5 | 	assert.strictEqual(user.id, 1);
  6 | });

`;

exports[`no-duplicate-assertions > invalid(19): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual((user.id), 1);\n\tassert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual((user.id), 1);
> 5 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(2): import test from 'node:test';\nimport assert from 'node:assert';\nfunction body() {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}\ntest('user', body); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | function body() {
  4 | 	assert.strictEqual(user.id, 1);
  5 | 	assert.strictEqual(user.id, 1);
  6 | }
  7 | test('user', body);

`;

exports[`no-duplicate-assertions > invalid(2): import test from 'node:test';\nimport assert from 'node:assert';\nfunction body() {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}\ntest('user', body); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | function body() {
  4 | 	assert.strictEqual(user.id, 1);
> 5 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | }
  7 | test('user', body);

`;

exports[`no-duplicate-assertions > invalid(20): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id as number, 1);\n\tassert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id as number, 1);
  5 | 	assert.strictEqual(user.id, 1);
  6 | });

`;

exports[`no-duplicate-assertions > invalid(20): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id as number, 1);\n\tassert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id as number, 1);
> 5 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(21): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1)!;\n\tassert.strictEqual(user.id, 1)!;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1)!;
  5 | 	assert.strictEqual(user.id, 1)!;
  6 | });

`;

exports[`no-duplicate-assertions > invalid(21): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1)!;\n\tassert.strictEqual(user.id, 1)!;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1)!;
> 5 | 	assert.strictEqual(user.id, 1)!;
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(22): // A body the call names out of line is the subtest's body\nimport {test} from 'node:test';\nimport assert from 'node:assert';\nconst body = () => {\n\tassert.ok(x);\n\tassert.ok(x);\n};\ntest('a', t => {\n\tt.test('sub', body);\n}); 1`] = `

   1 | // A body the call names out of line is the subtest's body
   2 | import {test} from 'node:test';
   3 | import assert from 'node:assert';
   4 | const body = () => {
   5 | 	assert.ok(x);
   6 | 	assert.ok(x);
   7 | };
   8 | test('a', t => {
   9 | 	t.test('sub', body);
  10 | });

`;

exports[`no-duplicate-assertions > invalid(22): // A body the call names out of line is the subtest's body\nimport {test} from 'node:test';\nimport assert from 'node:assert';\nconst body = () => {\n\tassert.ok(x);\n\tassert.ok(x);\n};\ntest('a', t => {\n\tt.test('sub', body);\n}); 2`] = `

Message:
   1 | // A body the call names out of line is the subtest's body
   2 | import {test} from 'node:test';
   3 | import assert from 'node:assert';
   4 | const body = () => {
   5 | 	assert.ok(x);
>  6 | 	assert.ok(x);
     | 	^^^^^^^^^^^^^ Duplicate adjacent assertion.
   7 | };
   8 | test('a', t => {
   9 | 	t.test('sub', body);
  10 | });

`;

exports[`no-duplicate-assertions > invalid(23): // The context of a test body the call names out of line\nimport {test} from 'node:test';\nfunction body(t) {\n\tt.assert.ok(a);\n\tt.assert.ok(a);\n}\ntest('a', body); 1`] = `

  1 | // The context of a test body the call names out of line
  2 | import {test} from 'node:test';
  3 | function body(t) {
  4 | 	t.assert.ok(a);
  5 | 	t.assert.ok(a);
  6 | }
  7 | test('a', body);

`;

exports[`no-duplicate-assertions > invalid(23): // The context of a test body the call names out of line\nimport {test} from 'node:test';\nfunction body(t) {\n\tt.assert.ok(a);\n\tt.assert.ok(a);\n}\ntest('a', body); 2`] = `

Message:
  1 | // The context of a test body the call names out of line
  2 | import {test} from 'node:test';
  3 | function body(t) {
  4 | 	t.assert.ok(a);
> 5 | 	t.assert.ok(a);
    | 	^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | }
  7 | test('a', body);

`;

exports[`no-duplicate-assertions > invalid(24): import {beforeEach} from 'node:test';\nimport assert from 'node:assert';\nbeforeEach(async t => {\n\tawait t.test('sub', () => {\n\t\tassert.ok(x);\n\t\tassert.ok(x);\n\t});\n}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | import assert from 'node:assert';
  3 | beforeEach(async t => {
  4 | 	await t.test('sub', () => {
  5 | 		assert.ok(x);
  6 | 		assert.ok(x);
  7 | 	});
  8 | });

`;

exports[`no-duplicate-assertions > invalid(24): import {beforeEach} from 'node:test';\nimport assert from 'node:assert';\nbeforeEach(async t => {\n\tawait t.test('sub', () => {\n\t\tassert.ok(x);\n\t\tassert.ok(x);\n\t});\n}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
  2 | import assert from 'node:assert';
  3 | beforeEach(async t => {
  4 | 	await t.test('sub', () => {
  5 | 		assert.ok(x);
> 6 | 		assert.ok(x);
    | 		^^^^^^^^^^^^^ Duplicate adjacent assertion.
  7 | 	});
  8 | });

`;

exports[`no-duplicate-assertions > invalid(25): import {beforeEach} from 'node:test';\nimport assert from 'node:assert';\nconst body = () => {\n\tassert.ok(x);\n\tassert.ok(x);\n};\nbeforeEach(async t => {\n\tawait t.test('sub', body);\n}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | import assert from 'node:assert';
  3 | const body = () => {
  4 | 	assert.ok(x);
  5 | 	assert.ok(x);
  6 | };
  7 | beforeEach(async t => {
  8 | 	await t.test('sub', body);
  9 | });

`;

exports[`no-duplicate-assertions > invalid(25): import {beforeEach} from 'node:test';\nimport assert from 'node:assert';\nconst body = () => {\n\tassert.ok(x);\n\tassert.ok(x);\n};\nbeforeEach(async t => {\n\tawait t.test('sub', body);\n}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
  2 | import assert from 'node:assert';
  3 | const body = () => {
  4 | 	assert.ok(x);
> 5 | 	assert.ok(x);
    | 	^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | };
  7 | beforeEach(async t => {
  8 | 	await t.test('sub', body);
  9 | });

`;

exports[`no-duplicate-assertions > invalid(26): import {beforeEach, getTestContext} from 'node:test';\nimport assert from 'node:assert';\nbeforeEach(async () => {\n\tawait getTestContext().test('sub', () => {\n\t\tassert.ok(x);\n\t\tassert.ok(x);\n\t});\n}); 1`] = `

  1 | import {beforeEach, getTestContext} from 'node:test';
  2 | import assert from 'node:assert';
  3 | beforeEach(async () => {
  4 | 	await getTestContext().test('sub', () => {
  5 | 		assert.ok(x);
  6 | 		assert.ok(x);
  7 | 	});
  8 | });

`;

exports[`no-duplicate-assertions > invalid(26): import {beforeEach, getTestContext} from 'node:test';\nimport assert from 'node:assert';\nbeforeEach(async () => {\n\tawait getTestContext().test('sub', () => {\n\t\tassert.ok(x);\n\t\tassert.ok(x);\n\t});\n}); 2`] = `

Message:
  1 | import {beforeEach, getTestContext} from 'node:test';
  2 | import assert from 'node:assert';
  3 | beforeEach(async () => {
  4 | 	await getTestContext().test('sub', () => {
  5 | 		assert.ok(x);
> 6 | 		assert.ok(x);
    | 		^^^^^^^^^^^^^ Duplicate adjacent assertion.
  7 | 	});
  8 | });

`;

exports[`no-duplicate-assertions > invalid(3): import test from 'node:test';\nimport assert from 'node:assert';\nconst body = () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n};\ntest('user', body); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | const body = () => {
  4 | 	assert.strictEqual(user.id, 1);
  5 | 	assert.strictEqual(user.id, 1);
  6 | };
  7 | test('user', body);

`;

exports[`no-duplicate-assertions > invalid(3): import test from 'node:test';\nimport assert from 'node:assert';\nconst body = () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n};\ntest('user', body); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | const body = () => {
  4 | 	assert.strictEqual(user.id, 1);
> 5 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | };
  7 | test('user', body);

`;

exports[`no-duplicate-assertions > invalid(4): import test from 'node:test';\nimport assert from 'node:assert';\nfunction body() {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}\ntest('user', {fn: body}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | function body() {
  4 | 	assert.strictEqual(user.id, 1);
  5 | 	assert.strictEqual(user.id, 1);
  6 | }
  7 | test('user', {fn: body});

`;

exports[`no-duplicate-assertions > invalid(4): import test from 'node:test';\nimport assert from 'node:assert';\nfunction body() {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}\ntest('user', {fn: body}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | function body() {
  4 | 	assert.strictEqual(user.id, 1);
> 5 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | }
  7 | test('user', {fn: body});

`;

exports[`no-duplicate-assertions > invalid(5): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
  5 | 	assert.strictEqual(user.id, 1);
  6 | 	assert.strictEqual(user.id, 1);
  7 | });

`;

exports[`no-duplicate-assertions > invalid(5): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
> 5 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | 	assert.strictEqual(user.id, 1);
  7 | });

`;

exports[`no-duplicate-assertions > invalid(5): import test from 'node:test';\nimport assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}); 3`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
  5 | 	assert.strictEqual(user.id, 1);
> 6 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  7 | });

`;

exports[`no-duplicate-assertions > invalid(6): import test from 'node:test';\nimport assert from 'node:assert/strict';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert/strict';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
  5 | 	assert.strictEqual(user.id, 1);
  6 | });

`;

exports[`no-duplicate-assertions > invalid(6): import test from 'node:test';\nimport assert from 'node:assert/strict';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert/strict';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
> 5 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(7): import test from 'node:test';\nimport {strictEqual} from 'node:assert';\ntest('user', () => {\n\tstrictEqual(user.id, 1);\n\tstrictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {strictEqual} from 'node:assert';
  3 | test('user', () => {
  4 | 	strictEqual(user.id, 1);
  5 | 	strictEqual(user.id, 1);
  6 | });

`;

exports[`no-duplicate-assertions > invalid(7): import test from 'node:test';\nimport {strictEqual} from 'node:assert';\ntest('user', () => {\n\tstrictEqual(user.id, 1);\n\tstrictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {strictEqual} from 'node:assert';
  3 | test('user', () => {
  4 | 	strictEqual(user.id, 1);
> 5 | 	strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(8): import test from 'node:test';\nimport * as assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import * as assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
  5 | 	assert.strictEqual(user.id, 1);
  6 | });

`;

exports[`no-duplicate-assertions > invalid(8): import test from 'node:test';\nimport * as assert from 'node:assert';\ntest('user', () => {\n\tassert.strictEqual(user.id, 1);\n\tassert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import * as assert from 'node:assert';
  3 | test('user', () => {
  4 | 	assert.strictEqual(user.id, 1);
> 5 | 	assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  6 | });

`;

exports[`no-duplicate-assertions > invalid(9): import test from 'node:test';\ntest('user', t => {\n\tt.assert.strictEqual(user.id, 1);\n\tt.assert.strictEqual(user.id, 1);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('user', t => {
  3 | 	t.assert.strictEqual(user.id, 1);
  4 | 	t.assert.strictEqual(user.id, 1);
  5 | });

`;

exports[`no-duplicate-assertions > invalid(9): import test from 'node:test';\ntest('user', t => {\n\tt.assert.strictEqual(user.id, 1);\n\tt.assert.strictEqual(user.id, 1);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('user', t => {
  3 | 	t.assert.strictEqual(user.id, 1);
> 4 | 	t.assert.strictEqual(user.id, 1);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate adjacent assertion.
  5 | });

`;
